--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,4 +28,5 @@ jobs:
       # Runs a single command using the runners shell
       - name: test
         run: echo Hello, world!
-
+      - name: pwd
+        run: pwd
